--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import "./components/header";
 @import "./components/create-employee";
 @import "./components/form";
+@import "./components/employeeList";
