--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,40 +1,107 @@
 .form-container {
-    background-color: white;
-    border-radius: 1rem;
-    padding: 3rem;
-  width: 600px;
-  height: 50%;
-  margin: auto;
+  z-index: 15;
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  place-items: center;
-  line-height: 1.5;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.185);
-  display: flex;
-  flex-direction: column;
+  background: #ffffff;
+  width: 600px;
+  padding: 3rem;
+  border-radius: 4px;
+  box-shadow: 0 0 30px rgba(#000000, .1);
+  box-sizing: border-box;
+  margin: 10px auto 100px;
+  overflow: hidden;
   form {
     display: flex;
     flex-direction: column;
     
     label {
-        margin-bottom: 10px;
+      display: block;
+      margin: 0 0 10px;
+      color: black;
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 1;
+      text-transform: uppercase;
+      letter-spacing: .2em;
+    }
+    legend {
+      display: block;
+      text-align: center;
+      margin: 0 0 10px;
+      color: black;
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 1;
+      text-transform: uppercase;
+      letter-spacing: .2em;
+      margin-bottom: 0.5rem;
     }
     input {
-        border-radius: 10px;
-        padding: 0.5rem;
-        margin: 10px;
+      outline: none;
+      display: block;
+      background: rgba(#000000, 0.1);
+      width: 100%;
+      border: 0;
+      border-radius: 4px;
+      box-sizing: border-box;
+      padding: 12px 20px;
+      color: rgba(#000000, 0.6);
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: 500;
+      line-height: inherit;
+      transition: 0.3s ease;
+      margin-bottom: 1rem;
+    }
+    .margin-input {
+      margin-top: 1rem;
     }
   }
 }
 
-
 .button-submit {
-  width: 30%;
-  height: 3rem;
-  background-color: white;
-  border-radius: 5px;
-  border: solid 1px black;
-  margin: 1rem auto;
+  align-items: center;
+  appearance: none;
+  text-transform: uppercase;
+  margin: 2rem  auto 0rem auto;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  width: 50%;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  height: 40px;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  &:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  }
+
+  &:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
+  }
 }
 
