--- a/src/styles/components/_employeeList.scss
+++ b/src/styles/components/_employeeList.scss
@@ -4,4 +4,17 @@
        margin: 2rem;
        font-size: 2rem;
    }
+   .datatable-container {
+    margin: 0 3rem;
+    .sc-eDWCr {
+        font-size: 1rem;
+    }
+    .sc-jrcTuL{
+        font-size: 0.9rem;
+    }
+   }
+   .search {
+    padding-right: 0.5rem;
+    font-size: 0.8rem;
+   }
 }
