--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import "./components/create-employee";
 @import "./components/form";
 @import "./components/employeeList";
+@import "./components/error404"
