--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -3,3 +3,12 @@
     padding:0;
     font-family: 'Lato', sans-serif;
 }
+
+.body {
+    margin: 0;
+    padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
+}
