--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -8,6 +8,9 @@
   box-shadow: 0 0 30px rgba(#000000, .1);
   box-sizing: border-box;
   margin: 10px auto 100px;
+  @media #{$mobile} {
+   width: 300px;     
+  }
   form {
     display: flex;
     flex-direction: column;
